--- a/.github/workflows/swift-format.yml
+++ b/.github/workflows/swift-format.yml
@@ -18,16 +18,21 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v5
+        with:
+          ref: ${{ github.head_ref || github.ref_name }}
 
-      - name: Cache swift-format
-        id: cache-swift-format
-        uses: actions/cache@v4
+      - name: Configure git safe directory
+        run: git config --global --add safe.directory /__w/swift-domain-type/swift-domain-type
+
+      - name: Restore swift-format cache
+        id: cache-swift-format-restore
+        uses: actions/cache/restore@v4
         with:
           path: /usr/local/bin/swift-format
-          key: ${{ runner.os }}-swift-format-${{ hashFiles('.github/workflows/swift-format.yml') }}
+          key: ${{ runner.os }}-swift-format-main-v1
 
       - name: Install swift-format
-        if: steps.cache-swift-format.outputs.cache-hit != 'true'
+        if: steps.cache-swift-format-restore.outputs.cache-hit != 'true'
         run: |
           git clone --depth 1 --branch main https://github.com/apple/swift-format.git
           cd swift-format
@@ -37,9 +42,16 @@ jobs:
           rm -rf swift-format
 
       - name: Format
-        run: swift-format format --ignore-unparsable-files --recursive --in-place Sources Tests
+        run: swift-format format --recursive --in-place --ignore-unparsable-files Sources Tests
 
       - uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: Run swift-format
           branch: 'main'
+
+      - name: Save swift-format cache
+        uses: actions/cache/save@v4
+        if: steps.cache-swift-format-restore.outputs.cache-hit != 'true'
+        with:
+          path: /usr/local/bin/swift-format
+          key: ${{ runner.os }}-swift-format-main-v1
