--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,49 +1,7 @@
-disabled_rules:
-  - line_length
-  - identifier_name
-  - nesting
-  - redundant_discardable_let  # Preserve 'let _ =' in result builder contexts (required for Swift 6.0+)
+# SwiftLint configuration for swift-domain-standard
+# Inherits from the shared parent configuration in swift-standards
 
-opt_in_rules:
-  - empty_count
-  - explicit_init
-  - sorted_imports
-  - force_cast
-  - force_try
-  - force_unwrapping
-  - closure_spacing
-  - operator_usage_whitespace
-  - private_outlet
-  - redundant_nil_coalescing
-  - unused_capture_list
-  - empty_string
-  - explicit_enum_raw_value
-  - literal_expression_end_indentation
-  - single_test_class
-  - sorted_first_last
-  - vertical_whitespace
-  - strict_fileprivate
-  - legacy_random
-  - no_extension_access_modifier
-  - colon
-  - trailing_comma
-  
-included:
-  - Package.swift
-  - Sources
-  - Tests
+parent_config: https://raw.githubusercontent.com/swift-standards/swift-standards/main/.swiftlint.yml
 
-excluded:
-  - Carthage
-  - Pods
-  - fastlane
-  - build
-
-analyzer_rules:
-  - unused_import
-
-colon:
-  apply_to_dictionaries: true
-
-vertical_whitespace:
-  max_empty_lines: 1
+# Package-specific overrides (if needed)
+# Add any swift-domain-standard specific rules here
